fix issue with input text field on recipe page overlapping mobile nav menu

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,7 @@ nav {
  height: 115px;
  background: #FEFEFE;
  filter: drop-shadow(0px 3px 25px rgba(102, 112, 133, 0.25));
- z-index: 1;
+ z-index: 100;
 }
 
 .navLinks a{
